--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "9e4ee032-de8e-41cf-9a99-49f1bf714cce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"I don't have any suggestion!\""
+       "{'سینا باقری نژاد', 'سینا خان'}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20,12 +20,12 @@
    "source": [
     "from get_search_suggestion import return_suggestion\n",
     "\n",
-    "return_suggestion('ی')"
+    "return_suggestion('سینا')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "44f56761-cc27-4da2-8e23-d3dd63be138c",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "d16b60b8-48d6-436c-aeea-48781258780b",
    "metadata": {},
    "outputs": [
@@ -1018,7 +1018,7 @@
        " 'إذا عدّا بکلّ واحد لا یبقی عقد': {'نیّف'}}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
