--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "9e4ee032-de8e-41cf-9a99-49f1bf714cce",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "{'سینا باقری نژاد', 'سینا خان'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,29 +25,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "44f56761-cc27-4da2-8e23-d3dd63be138c",
+   "execution_count": 12,
+   "id": "c230e6cf-6fef-4e5f-9b5e-9b94a7d3c169",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import redis\n",
     "import pickle\n",
-    "\n",
-    "suggestion_file='files/search_suggestion.pkl'\n",
-    "pkl_file = open(suggestion_file, \"rb\")\n",
-    "suggestions = pickle.load(pkl_file)\n",
-    "pkl_file.close()"
+    "r = redis.Redis(host='localhost', port=6379, db=9)\n",
+    "read_dict = r.get('suggestions')\n",
+    "suggestion = pickle.loads(read_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "d16b60b8-48d6-436c-aeea-48781258780b",
+   "execution_count": 13,
+   "id": "6b6310c2-aa09-4055-94c7-9210959eeb7a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'***checkpoint***': 56306,\n",
+       "{'***checkpoint***': 56938,\n",
        " 'فارکس': {'همجنس بازی'},\n",
        " 'بلتیتان': {'بلتستان'},\n",
        " 'شهادت فاطمه': {'شهادت فاطمه الزهرا'},\n",
@@ -1015,22 +1014,30 @@
        " 'کتابخانه': {'جهد'},\n",
        " 'اسلام آمریکایی': {'-اسلام آمریکایی-', 'اعرافی'},\n",
        " 'تست میکنم': {'عجب تستی شد!'},\n",
-       " 'إذا عدّا بکلّ واحد لا یبقی عقد': {'نیّف'}}"
+       " 'إذا عدّا بکلّ واحد لا یبقی عقد': {'نیّف'},\n",
+       " 'نفس اماره': {'تعریف نفس اماره'},\n",
+       " 'gbj': {'لذت'},\n",
+       " 'lvhjf gbj': {'مراتب لذت'},\n",
+       " 'علم الهی': {'علم اجمالی'},\n",
+       " 'فرهنگ و تهاجم فرهنگی': {'tvik- , jih[l tvik-d'},\n",
+       " 'قلیچ': {'کواعب'},\n",
+       " 'فیلاب': {'تبرج'},\n",
+       " 'اهمیت دعا در امید به زندگی': {'امیدواری'}}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "suggestions"
+    "suggestion"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa23081d-2dce-440d-94f1-cef89911e3f2",
+   "id": "34f766e8-6e9d-41a8-94ff-ffc15cc09eae",
    "metadata": {},
    "outputs": [],
    "source": []
