add README.md and requirements.txt

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "9e4ee032-de8e-41cf-9a99-49f1bf714cce",
    "metadata": {},
    "outputs": [
@@ -12,34 +12,20 @@
        "{'سینا باقری نژاد', 'سینا خان'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from get_search_suggestion import return_suggestion\n",
+    "from get_search_suggestion import return_suggestion, suggestion_dict\n",
     "\n",
     "return_suggestion('سینا')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "c230e6cf-6fef-4e5f-9b5e-9b94a7d3c169",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import redis\n",
-    "import pickle\n",
-    "r = redis.Redis(host='localhost', port=6379, db=9)\n",
-    "read_dict = r.get('suggestions')\n",
-    "suggestion = pickle.loads(read_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "6b6310c2-aa09-4055-94c7-9210959eeb7a",
    "metadata": {},
    "outputs": [
@@ -1025,13 +1011,13 @@
        " 'اهمیت دعا در امید به زندگی': {'امیدواری'}}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "suggestion"
+    "suggestion_dict()"
    ]
   },
   {
