--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "9e4ee032-de8e-41cf-9a99-49f1bf714cce",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "['سینا خان', 'سینا باقری نژاد']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "864de08c-eb49-495a-be72-03bfbd51f562",
    "metadata": {},
    "outputs": [
@@ -35,18 +35,18 @@
        "['سینا خان', 'سینا باقری نژاد']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "return_suggestion('سینا', method='minimum_repeated', n=1)"
+    "return_suggestion('سینا', method='n-repeated', n=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "535bb404-2237-4c96-b10c-c840ca7b433a",
    "metadata": {},
    "outputs": [
@@ -56,13 +56,13 @@
        "['سینا خان']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "return_suggestion('سینا', method='maximum_numbers', n=1)"
+    "return_suggestion('سینا', method='n-best', n=1)"
    ]
   },
   {
